@@ -16,6 +16,9 @@
 	<script type="text/javascript" src="/ApacheGallery/modern/OpenLayers.js"></script>
 	<script type="text/javascript" src="//maps.google.com/maps/api/js?v=3.6&amp;sensor=false"></script>
 	<script type="text/javascript" src="/ApacheGallery/modern/map.js"></script>
+	<script type="text/javascript">
+		var availablePhotoWidths = [{ $AVAILABLEWIDTHS }];
+	</script>
 
 	{ $META }
 </head>
